Use nunjucks to template some files and give unique name to C@E app

--- a/resources/compute-js/fastly.toml.njk
+++ b/resources/compute-js/fastly.toml.njk
@@ -5,7 +5,7 @@ authors = []
 description = "NextJs Server"
 language = "javascript"
 manifest_version = 2
-name = "next-compute-js"
+name = "{{ appName }}"
 service_id = ""
 
 [local_server]
