--- a/resources/compute-js/package.json.njk
+++ b/resources/compute-js/package.json.njk
@@ -1,6 +1,6 @@
 {
     "main": "src/index.js",
-    "name": "next-compute-js",
+    "name": "{{ appName }}",
     "private": true,
     "license": "MIT",
     "scripts": {
