--- a/resources/compute-js/package.json.njk
+++ b/resources/compute-js/package.json.njk
@@ -4,14 +4,16 @@
     "private": true,
     "license": "MIT",
     "scripts": {
-        "deploy": "fastly compute deploy"
+        "prebuild": "npx check-next-version && npx @fastly/compute-js-static-publish --build-static --suppress-framework-warnings && webpack",
+        "build": "js-compute-runtime ./bin/index.js ./bin/main.wasm",
+        "deploy": "npm run build && fastly compute deploy"
     },
     "dependencies": {
-        "@fastly/js-compute": "^1.0.0",
+        "@fastly/js-compute": "^1.3.4",
         "util": "^0.12.4"
     },
     "devDependencies": {
-        "@fastly/compute-js-static-publish": "^3.0.1",
+        "@fastly/compute-js-static-publish": "^3.5.0",
         "@fastly/next-compute-js": "^0.8.0",
         "assert": "^2.0.0",
         "browserify-zlib": "^0.2.0",
